# ska-python-skeleton

./: .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  code-analysis.sh  docker-requirements.txt  pyproject.toml  setup.cfg  setup.py
docs/src/: conf.py
docs/src/package/: guide.rst
notebooks/: notebook-test.ipynb
ska_python_skeleton/: main.py
ska_skeleton/: ska_skeleton.py
src/ska/ska_python_skeleton/: __init__.py
src/ska/skeleton/: __init__.py  example.py
src/ska_python_skeleton/: __init__.py  example.py
test-harness/: Makefile
tests/: __init__.py  test_example.py  test_ska_skeleton.py
