[tool.poetry]
name = "ska-python-skeleton"
version = "0.4.26"
description = "SKA Python Skeleton"
authors = ["James Sawdy <james.sawdy@cgi.com>"]
license = "BSD-3-Clause"
packages = [
    { include = "ska_python_skeleton", from = "src" }
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI"

[tool.poetry.dependencies]
python = "^3.10"
nbmake = "^1.4.1"
nbqa = "^1.7.0"
isort = "^5.6.4"
flake8 = "^3.9.2"
black = "^22.3.0"
numpy = "^1.25.1"
setuptools-scm = "^7.1.0"
jsonschema = "^4.18.4"
pytest-json-report = "^1.5.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.4"
pytest-json = "^0.4.0"
pylance = "^0.5.9"

[tool.poetry.group.dev.dependencies]
markupsafe = "^2.1.3"
pygments = "^2.15.1"
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-pylint = "^0.19.0"
python-dotenv = ">=0.5.1"
setuptools = "^68.0.0"
pipdeptree = "^2.10.2"
pylint-junit = "^0.3.2"

[tool.poetry.group.docs.dependencies]
myst-parser = "^4.0.0"
ska-ser-sphinx-theme = "^0.2.0"
sphinx = "^7.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

